--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --main-bg-color: #dfffd8;
   --btn-bg-color: #3e54ac;
   --white-color: #ffffff;
+  --royal-blue: #2f58cd;
 }
 
 body {
@@ -33,7 +34,7 @@ hr {
   align-items: center;
 }
 
-.challenge {
+.paper {
   margin: 1rem 0;
   padding: 4rem 2rem;
   width: 500px;
@@ -42,7 +43,7 @@ hr {
   background-color: #b4e4ff;
 }
 
-.challenge input {
+.paper input {
   padding: 10px;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
   font-size: medium;
@@ -70,7 +71,7 @@ button {
 }
 
 button:hover {
-  background-color: #2f58cd;
+  background-color: var(--royal-blue);
   cursor: pointer;
 }
 
@@ -96,7 +97,7 @@ button:hover {
 }
 
 .styled-table tbody tr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid var(--white-color);
 }
 
 .styled-table tbody tr:nth-of-type(even) {
