--- a/src/App.css
+++ b/src/App.css
@@ -205,3 +205,22 @@ button:disabled {
   color: var(--powder-blue);
   cursor: default;
 }
+
+.loader {
+  border: 4px solid var(--white-color);
+  border-radius: 50%;
+  border-top: 4px solid var(--royal-blue);
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+  margin: 2rem auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
